--- a/sass/_navegador.scss
+++ b/sass/_navegador.scss
@@ -3,16 +3,51 @@
         height: 250px;
         background: url(../assets/images.jpg);
         background-position: center;
-        background-size: cover;        
+        background-size: cover;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;        
         .titulo{
-            color:gray;
-            font-size:32px;
+            color: rgb(56, 62, 67);
+            font-size:36px;
             padding-top: 6.25%;
             margin-left: 5%;            
             .titulo2{
                 display:block;
                 font-style:italic;
-                font-size:48px;
+                font-size: 52px;
+            }
+        }
+    }
+    .navegador{
+        
+        .list-nav{
+            margin-top: 0;
+            padding: 0;            
+            text-align: center;
+            background-color: rgb(28, 74, 72);
+            border-bottom-left-radius: 25px;
+            border-bottom-right-radius: 25px;
+            
+            
+
+            #li-4{
+                border-right: 0px solid #ffffff;
+            }
+
+            .list-item{
+                list-style: none;
+                padding: 2.5%;
+                display:inline-block;
+                padding-left: 4.5%;
+                padding-right: 4.5%;
+                margin-top: 2.5%;
+                margin-bottom: 2.5%;
+                border-right: 3px solid #ffffff;
+                .list-link{                    
+                    text-decoration: none;
+                    color:white;
+                    font-size: 36px;                       
+                }
             }
         }
     }
