--- a/sass/_navegador.scss
+++ b/sass/_navegador.scss
@@ -5,16 +5,23 @@
         background-position: center;
         background-size: cover;
         border-top-left-radius: 25px;
-        border-top-right-radius: 25px;        
+        border-top-right-radius: 25px; 
+            
         .titulo{
             color: rgb(56, 62, 67);
             font-size:36px;
-            padding-top: 6.25%;
-            margin-left: 5%;            
+            padding-top: 2.25%;
+            margin-left: 10%;            
             .titulo2{
                 display:block;
                 font-style:italic;
-                font-size: 52px;
+                font-size: 70px;
+            }
+            .titulo3{
+                display:block;
+                font-style:italic;
+                font-size: 70px;
+                margin-left: 15%;
             }
         }
     }
